--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,11 +40,11 @@
     "react/react-in-jsx-scope": "off",
    // NextJs specific fix: allow jsx syntax in js files
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }], //should add ".ts" if typescript project
-    "react/display-name": 1,
     "react/jsx-props-no-spreading": "off",
     "no-nested-ternary": "off",
     "react/prop-types": "off",
     "no-underscore-dangle": "off",
-    "jsx-a11y/anchor-is-valid": "off"
+    "jsx-a11y/anchor-is-valid": "off",
+    "react/display-name": "off"
   }
 }
