--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,8 @@
     "react/prop-types": "off",
     "no-underscore-dangle": "off",
     "jsx-a11y/anchor-is-valid": "off",
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off"
   }
 }
