--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
     "jsx-a11y/anchor-is-valid": "off",
     "react/display-name": "off",
     "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/no-static-element-interactions": "off"
+    "jsx-a11y/no-static-element-interactions": "off",
+    "no-plusplus": "off"
   }
 }
