--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
+    "react-loading-skeleton": "^2.2.0",
     "sass": "^1.32.8",
     "yup": "^0.32.9"
   },
