--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,6 +48,7 @@
     "react/display-name": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
-    "no-plusplus": "off"
+    "no-plusplus": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
