--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
-    "next": "10.0.8",
-    "react": "17.0.1",
+    "next": "^11.0.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.2",
     "react-loading-skeleton": "^2.2.0",
     "sass": "^1.32.8",
     "yup": "^0.32.9"
@@ -23,6 +23,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
