--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^2.2.0",
     "sass": "^1.32.8",
+    "sharp": "^0.29.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
